style: versão mobile

--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
         </div>
 
         <!-- Game 2 -->
-        <div class="game-card">
-            <div class="game-info">
+        <div class="game-card reverse-mobile">
+            <video class="game-image mobile"  src="assets/video/geobot.mp4" autoplay muted loop></video>
+             <div class="game-info">
                 <h3>Geobot</h3>
                 <p>
                     Explore o interior do planeta com Geobot, um robô geofísico criado para investigar as profundezas da Terra. Da crosta ao núcleo você coleta chips que revelam dados e curiosidades sobre a estrutura geológica do planeta. Mergulhe em uma aventura científica onde jogabilidade e geofísica se encontram em uma jornada de descoberta e conhecimento.
@@ -95,8 +96,6 @@
                     <span class="text">Jogue agora!</span>
                 </button>
             </div>
-
-            <video class="game-image mobile"  src="assets/video/geobot.mp4" autoplay muted loop></video>
         </div>
 
         <div class="custom-shape-divider-bottom-1762575933">
