--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                 <p>
                     Explore o interior do planeta com Geobot, um robô geofísico criado para investigar as profundezas da Terra. Da crosta ao núcleo você coleta chips que revelam dados e curiosidades sobre a estrutura geológica do planeta. Mergulhe em uma aventura científica onde jogabilidade e geofísica se encontram em uma jornada de descoberta e conhecimento.
                 </p>
-                <button class="btn-play" href="https://sapogamesofc.itch.io/geobot">
+                <a class="btn-play" href="https://sapogamesofc.itch.io/geobot">
                     <svg class="icon" id="Play" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                         <path class="color000000 svgShape" fill="#ffffff" d="M12 39c-.549 0-1.095-.15-1.578-.447A3.008 3.008 0 0 1 9 36V12c0-1.041.54-2.007 1.422-2.553a3.014 3.014 0 0 1 2.919-.132l24 12a3.003 3.003 0 0 1 0 5.37l-24 12c-.42.21-.885.315-1.341.315z"></path>
                     </svg>
                     <span class="text">Jogue agora!</span>
-                </button>
+                </a>
             </div>
         </div>
 
