style: team swiper

--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
         <div id="team-selector-wrp">
             <div id="team-characters" class="team-col"></div>
             <section id="team-player" class="team-col">
+                <button class="team-swiper-btn prev" aria-label="Anterior">&lt;</button>
                 <div class="player-img">
                     <img src="" alt="">
                 </div>
+                <button class="team-swiper-btn next" aria-label="Próximo">&gt;</button>
                 <p id="player-name"></p>
             </section>
             <aside id="team-info" class="team-col">
