style tag de desenvolvimento

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <!-- <img class="game-image" src="assets/img/jogos/banzeiro.jpeg" > -->
             <div class="game-info">
                 <h3>Banzeiro</h3>
+                <p class="development-tag">(Em desenvolvimento)</p>
                 <p>
                     Fuja da destruição humana nas águas da Amazônia! Em Banzeiro, você é um peixe lutando para sobreviver à lama tóxica, ao lixo e à pesca predatória. Nade o mais longe que puder, desbloqueie novas espécies e descubra até onde a natureza consegue resistir.
                 </p>
@@ -87,6 +88,7 @@
             <video class="game-image mobile"  src="assets/video/geobot.mp4" autoplay muted loop></video>
              <div class="game-info">
                 <h3>Geobot</h3>
+                <p class="development-tag">(Em desenvolvimento)</p>
                 <p>
                     Explore o interior do planeta com Geobot, um robô geofísico criado para investigar as profundezas da Terra. Da crosta ao núcleo você coleta chips que revelam dados e curiosidades sobre a estrutura geológica do planeta. Mergulhe em uma aventura científica onde jogabilidade e geofísica se encontram em uma jornada de descoberta e conhecimento.
                 </p>
@@ -156,11 +158,11 @@
                     <div class="footer-contact">
                         <h3>Entre em Contato</h3>
                         <p>Tem uma ideia ou quer fazer um pedido? Nos envie uma mensagem!</p>
-                        <form action="#" method="POST" class="contact-form">
+                        <!-- <form action="#" method="POST" class="contact-form">
                             <input type="email" name="email" placeholder="Seu melhor e-mail" required>
                             <textarea name="description" placeholder="Descreva sua ideia ou pedido..." rows="4" required></textarea>
                             <button type="submit" class="btn-contact">Enviar</button>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </div>
