refactor: melhoramento seo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style/css.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Sapo Games</title>
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Sapo Games: Estúdio de desenvolvimento de jogos independentes focado na Amazônia e ciência. Conheça nossos jogos Banzeiro e Geobot.">
+    <meta name="keywords" content="jogos indie, games amazônia, jogos educativos, desenvolvimento de jogos, Banzeiro, Geobot, Sapo Games">
+    <meta name="author" content="Sapo Games">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook / WhatsApp -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sapogamesofc.itch.io/">
+    <meta property="og:title" content="Sapo Games - Jogos com Conhecimento">
+    <meta property="og:description" content="Onde tem floresta, tem conhecimento. Conheça nossos jogos focados em cultura e ciência.">
+    <meta property="og:image" content="assets/public/marca.png">
+    <meta property="og:locale" content="pt_BR">
 </head>
 <body>
     <!-- Navigation -->
@@ -39,9 +53,9 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <div class="hero-main-content">
-                <div class="logo">
-                    <img src="assets/public/marca.png" width="500" height="300" alt="Sapo Gamer Logo">
-                </div>
+                <h1 class="logo">
+                    <img src="assets/public/marca.png" width="500" height="300" alt="Sapo Games - Estúdio de Jogos Independentes">
+                </h1>
                 <p class="frase-container" >Onde tem floresta, tem conhecimento. Onde tem conhecimento, a gente propaga!</p>
                 <a class="btn-play" href="https://sapogamesofc.itch.io/">
                     <svg class="icon" id="Play" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
