refactor: google search

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <meta property="og:description" content="Onde tem floresta, tem conhecimento. Conheça nossos jogos focados em cultura e ciência.">
     <meta property="og:image" content="assets/public/marca.png">
     <meta property="og:locale" content="pt_BR">
+
+    <!-- Canonical URL: Diz ao Google que esta é a versão principal da página -->
+    <link rel="canonical" href="https://sapogames.github.io/Sapo-Games/">
 </head>
 <body>
     <!-- Navigation -->
