--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="og:description" content="Onde tem floresta, tem conhecimento. Conheça nossos jogos focados em cultura e ciência.">
     <meta property="og:image" content="assets/public/marca.png">
     <meta property="og:locale" content="pt_BR">
+    <meta name="google-site-verification" content="M-3e2aWraqYF14tSoanIFhJmhOhTUk5SwyUJhTOTb0g" />
 
     <!-- Canonical URL: Diz ao Google que esta é a versão principal da página -->
     <link rel="canonical" href="https://sapogames.github.io/Sapo-Games/">
