--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sapogamesofc.itch.io/">
+    <meta property="og:url" content="https://sapogames.github.io/Sapo-Games/">
     <meta property="og:title" content="Sapo Games - Jogos com Conhecimento">
     <meta property="og:description" content="Onde tem floresta, tem conhecimento. Conheça nossos jogos focados em cultura e ciência.">
-    <meta property="og:image" content="assets/public/marca.png">
+    <meta property="og:image" content="https://sapogames.github.io/Sapo-Games/assets/public/marca.png">
     <meta property="og:locale" content="pt_BR">
     <meta name="google-site-verification" content="M-3e2aWraqYF14tSoanIFhJmhOhTUk5SwyUJhTOTb0g" />
 
