logo nova e seo

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/public/icon.png" type="image/svg+xml">
+    <link rel="icon" href="assets/public/icon.png" type="image/png">
     <link rel="stylesheet" href="style/css.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Sapo Games</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Sapo Games: Estúdio de desenvolvimento de jogos independentes focado na Amazônia e ciência. Conheça nossos jogos Banzeiro e Geobot.">
+    <meta name="description" content="Desenvolvedores de jogos independentes focado na Amazônia e ciência. Conheça nossos jogos Banzeiro e Geobot.">
     <meta name="keywords" content="jogos indie, games amazônia, jogos educativos, desenvolvimento de jogos, Banzeiro, Geobot, Sapo Games">
     <meta name="author" content="Sapo Games">
     <meta name="robots" content="index, follow">
@@ -25,6 +25,16 @@
 
     <!-- Canonical URL: Diz ao Google que esta é a versão principal da página -->
     <link rel="canonical" href="https://sapogames.github.io/Sapo-Games/">
+
+    <!-- Dados Estruturados (JSON-LD) para SEO do Google -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Sapo Games",
+      "url": "https://sapogames.github.io/Sapo-Games/"
+    }
+    </script>
 </head>
 <body>
     <!-- Navigation -->
