--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/public/icon.png" type="image/png">
+    <link rel="icon" href="assets/public/icon2.png" type="image/png">
     <link rel="stylesheet" href="style/css.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Sapo Games</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Desenvolvedores de jogos independentes focado na Amazônia e ciência. Conheça nossos jogos Banzeiro e Geobot.">
+    <meta name="description" content="Desenvolvemos jogos independentes focado na Amazônia e ciência. Conheça nossos jogos Banzeiro e Geobot.">
     <meta name="keywords" content="jogos indie, games amazônia, jogos educativos, desenvolvimento de jogos, Banzeiro, Geobot, Sapo Games">
     <meta name="author" content="Sapo Games">
     <meta name="robots" content="index, follow">
@@ -32,7 +32,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <a href="#" class="nav-logo"><img src="assets/public/icon.png" alt="Sapo Gamer Logo"></a>
+            <a href="#" class="nav-logo"><img src="assets/public/icon2.png" alt="Sapo Gamer Logo"></a>
             <ul>
                 <li><a href="#home">Inicio</a></li>
                 <li><a href="#jogos">Jogos</a></li>
@@ -171,7 +171,7 @@
             <div class="footer-main">
                 <div class="footer-left">
                     <div class="footer-logo">
-                        <img src="assets/public/icon.png" alt="Sapo Gamer Logo">
+                        <img src="assets/public/icon2.png" alt="Sapo Gamer Logo">
                     </div>
                 </div>
                 <div class="footer-right">
